force-app/main/default/objects/Creditsafe_Company_Negative_Info_NL__c/Creditsafe_Company_Negative_Info_NL__c.object-meta.xml
<CustomObject>
    <description>Class CourtData.</description>
    <label>Creditsafe Company Negative Info NL</label>
    <nameField>
        <displayFormat>CI-{000000}</displayFormat>
        <label>Creditsafe Company Negative Info NL Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Creditsafe Company Negative Info NL</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>