force-app/main/default/objects/Creditsafe_Company_Negative_Info_NL__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <description>Address of the receiver that deals with the bankruptcy of this company.</description>
    <label>Address</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>