force-app/main/default/objects/Creditsafe_Company_Negative_Info_NL__c/fields/Court_Action__c.field-meta.xml
<CustomField>
    <fullName>Court_Action__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if there is a court action.</description>
    <label>Court Action</label>
    <type>Checkbox</type>
</CustomField>