force-app/main/default/objects/Creditsafe_Company_Negative_Info_NL__c/fields/Creditsafe_Company_Report_Full__c.field-meta.xml
<CustomField>
    <fullName>Creditsafe_Company_Report_Full__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A detailed report about a company.</description>
    <label>Creditsafe Company Report Full</label>
    <referenceTo>Creditsafe_Company_Report_Full__c</referenceTo>
    <relationshipLabel>Negative Info NL Court Items</relationshipLabel>
    <relationshipName>Negative_Info_NL_Court_Items</relationshipName>
    <type>Lookup</type>
</CustomField>